feat: add 768 res

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <header>
     </header>
     <main class="content">
-      <section class="case">
-        <img class="case__schild" src="./images/schild.jpg" alt="Надпись: новый кейс.">
-        <h1 class="case__title-heading title">Облачный колл-центр «Атлант»</h1>
-        <div class="case__avatar"></div>
-        <p class="case__subtitle subtitle">Продукты Тинькофф Бизнес</p>
-        <ul class="case__list">
-          <li class="case__list-items"># торговый эквайринг</li>
-          <li class="case__list-items"># зарплатный проект</li>
-          <li class="case__list-items"># облачный колл-центр</li>
-        </ul>
+      <section class="case content__case">
+        <article class="case__header">
+          <img class="case__schild" src="./images/schild.jpg" alt="Надпись: новый кейс.">
+          <h1 class="case__title-heading title">Облачный колл-центр «Атлант»</h1>
+          <div class="case__avatar"></div>
+          <p class="case__subtitle-header subtitle">Продукты Тинькофф Бизнес</p>
+          <ul class="case__list">
+            <li class="case__list-items"># торговый эквайринг</li>
+            <li class="case__list-items"># зарплатный проект</li>
+            <li class="case__list-items"># облачный колл-центр</li>
+          </ul>
+        </article>
         <article class="case__item">
           <h2 class="case__title title">Бизнес</h2>
           <p class="case__description">ЖилфондСервис помогает с автоматизацией в сфере ЖКХ. Он работает с крупными управляющими компаниями, небольшими ТСЖ и ресурсноснабжающих организаций — РСО.</p>
@@ -53,7 +55,7 @@
           </p>
          </article>
          <article class="case__item">
-          <h2 class="case__title-foot title">Решение &#8594;</h2>
+          <h2 class="case__title-foot title">Решение</h2><div class="case__arrow"></div>
           <div class="case__url-wrapper">
             <h2 class="subtitle">
               <a href="#" class="case__url">Тинькофф Касса</a>
@@ -77,6 +79,7 @@
          </article>
          <article class="case__item">
           <h2 class="case__title-result title">«Выйти на новый сегмент клиентов и удвоить прибыль»</h2>
+          <h2 class="case__title-result_large title">«Выйти на новый сегмент и удвоить прибыль»</h2>
           <p class="case__description">
             Раньше мы привлекали клиентов только через агентскую сеть — работали с партнерами и получали заинтересованных клиентов от них. Я не верил в эффективность собственных каналов продаж: интернет-рекламу или колл-центр. Казалось, что консалтинг для b2b сложно продать компаниям, которые раньше про нас ничего не слышали.
           </p>
