--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <article class="case__header">
           <img class="case__schild" src="./images/schild.jpg" alt="Надпись: новый кейс.">
           <h1 class="case__title-heading title">Облачный колл-центр «Атлант»</h1>
+          <h2 class="case__title-heading_large title">Автоматизации в сфере ЖКХ «ЖилфондСервис»</h2>
           <div class="case__avatar"></div>
           <p class="case__subtitle-header subtitle">Продукты Тинькофф Бизнес</p>
           <ul class="case__list">
@@ -36,7 +37,7 @@
             Чтобы привлечь больше клиентов, компания разрабатывает сервисы, которые помогают увеличить собираемость платежей за коммунальные услуги.
           </p>
           <p class="case__description">
-            Пример сервиса — «Квартплата.онлайн». Гипотеза такая: если жителям будет проще разбираться с платежами, то и задержек с оплатой станет меньше. Этот сервис и решает эту задачу.
+            <span class="case__description-span_large_bold">Пример сервиса — «Квартплата.онлайн».</span> Гипотеза такая: если жителям будет проще разбираться с платежами, то и задержек с оплатой станет меньше. Этот сервис и решает эту задачу.
           </p>
           <p class="case__description">
             C помощью «Квартплата.онлайн» жителям проще рассчитывать платежи и оплачивать. Например, они могут с телефона сдать показания счетчиков и оплатить одной кнопкой за все: воду, электричество, благоустройство территории и так далее.
@@ -53,6 +54,9 @@
           <p class="case__description">
             👉️<span class="case__span-accent">  Без ручной обработки платежей от ЖилфондСервиса.</span> Жители переводят одну сумму, а деньги в нужной пропорции переводятся поставщикам света, газа, воды и другим операторам коммунальных услуг.
           </p>
+          <p class="case__description case__description_resolution_large">
+            Обычный интернет-эквайринг, как у магазинов, не подходит. Поэтому компания искала партнера, который смог бы решить эти задачи.
+          </p>
          </article>
          <article class="case__item">
           <h2 class="case__title-foot title">Решение</h2><div class="case__arrow"></div>
@@ -61,13 +65,13 @@
               <a href="#" class="case__url">Тинькофф Касса</a>
             </h2>
           </div>
-          <p class="case__description">
+          <p class="case__description case__description_font-size_large">
             ✅<span class="case__span-accent">  Платеж за несколько секунд.</span> Собственник оплачивает всю коммуналку одной кнопкой, даже если у него квартир.
           </p>
-          <p class="case__description">
+          <p class="case__description case__description_font-size_large">
             ✅<span class="case__span-accent">  Оплата в любом формате</span> — с сайта, приложения, картой, Google Pay или Apple Pay.
           </p>
-          <p class="case__description">
+          <p class="case__description case__description_font-size_large">
             ✅<span class="case__span-accent">  Сплитование или другими словами — расщепление платежей работает автоматически.<span> ЖилфондСервису не нужно тратить время и рисковать ошибками в расчеете.
           </p>
          </article>
@@ -79,9 +83,16 @@
          </article>
          <article class="case__item">
           <h2 class="case__title-result title">«Выйти на новый сегмент клиентов и удвоить прибыль»</h2>
-          <h2 class="case__title-result_large title">«Выйти на новый сегмент и удвоить прибыль»</h2>
-          <p class="case__description">
+          <h2 class="case__title-result case__title-result_resolution-l_large title">«С интеграцией справились меньше чем за неделю»</h2>
+          <h2 class="case__title-result case__title-result_resolution-m_medium title">«Выйти на новый сегмент и удвоить прибыль»</h2>
+          <p class="case__description case__description_hide">
             Раньше мы привлекали клиентов только через агентскую сеть — работали с партнерами и получали заинтересованных клиентов от них. Я не верил в эффективность собственных каналов продаж: интернет-рекламу или колл-центр. Казалось, что консалтинг для b2b сложно продать компаниям, которые раньше про нас ничего не слышали.
+          </p>
+          <p class="case__description case__description_visible">
+            Изначально у Тинькофф не было возможности расщеплять платеж при оплате через Google Pay и Apple Pay. Для нас это было важно, потому что этот способ удобнее при оплате через мобильное приложение. Мы нашли банк, где эта функция уже есть.
+          </p>
+          <p class="case__description case__description_visible">
+            Оказалось, другой банк все-таки не справился. Интеграция шла долго. Пока мы пытались настроить интеграцию, Тинькофф уже реализовал расщепление через Apple Pay и Google Pay. Мы вернулись к переговорам и настроили интеграцию меньше чем за неделю.
           </p>
          </article>
          <article class="info">
