fix: add aria-label

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <header>
     </header>
     <main class="content">
-      <section class="case content__case">
+      <section class="case content__case" aria-label="case">
         <article class="case__header">
           <img class="case__schild" src="./images/schild.jpg" alt="Надпись: новый кейс.">
           <h1 class="case__title-heading title">Облачный колл-центр «Атлант»</h1>
@@ -72,7 +72,7 @@
             ✅<span class="case__span-accent">  Оплата в любом формате</span> — с сайта, приложения, картой, Google Pay или Apple Pay.
           </p>
           <p class="case__description case__description_font-size_large">
-            ✅<span class="case__span-accent">  Сплитование или другими словами — расщепление платежей работает автоматически.<span> ЖилфондСервису не нужно тратить время и рисковать ошибками в расчеете.
+            ✅<span class="case__span-accent">  Сплитование или другими словами — расщепление платежей работает автоматически.</span> ЖилфондСервису не нужно тратить время и рисковать ошибками в расчеете.
           </p>
          </article>
          <article class="case__item">
